[tool.poetry]
name = "tf_gad"
version = "0.1.0"
description = "Guided anistropic diffusion algorithm in TensorFlow"
authors = ["Nicolas Audebert <nicolas.audebert@quicksign.com>"]

[tool.poetry.dependencies]
python = "^2.7|>=3.5"
tensorflow = "^1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
